policies/kyverno/disallow-latest-tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: m2cloud-disallow-latest-tag
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: require-image-tag
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "Les images doivent être versionnées, pas latest."
        pattern:
          spec:
            containers:
              - image: "!*:latest"
